--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="downloadDetails"
             type="com.example.load_app.model.DownloadDetails" />
@@ -29,9 +28,11 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.constraintlayout.motion.widget.MotionLayout
+            android:id="@+id/motionLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:layoutDescription="@xml/activity_detail_scene"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:context=".DetailActivity"
             tools:showIn="@layout/activity_detail">
@@ -40,49 +41,40 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="32dp"
                 android:text="@string/file_name"
                 android:textSize="24sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                tools:layout_editor_absoluteX="32dp"
+                tools:layout_editor_absoluteY="32dp" />
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="16dp"
                 android:text="@string/status"
                 android:textSize="24sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                tools:layout_editor_absoluteX="73dp"
+                tools:layout_editor_absoluteY="194dp" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
+                android:text="@{downloadDetails.name}"
                 android:textSize="24sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textView"
-                app:layout_constraintTop_toTopOf="@+id/textView"
-                tools:text="@string/glide"
-                android:textColor="@color/white"
-                android:text="@{downloadDetails.name}"/>
+                tools:layout_editor_absoluteX="411dp"
+                tools:layout_editor_absoluteY="80dp"
+                tools:text="@string/glide" />
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="@{downloadDetails.status.text}"
                 android:textSize="24sp"
-                app:layout_constraintStart_toStartOf="@+id/textView3"
-                app:layout_constraintTop_toTopOf="@+id/textView2"
-                tools:text="Success"
-                android:textColor="@color/white"
-                android:text="@{downloadDetails.status.text}"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                tools:layout_editor_absoluteX="102dp"
+                tools:layout_editor_absoluteY="162dp"
+                tools:text="Success" />
+        </androidx.constraintlayout.motion.widget.MotionLayout>
 
         <Button
             android:id="@+id/okButton"
